<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sheet"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/margin_large"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/letsStart"
            android:textSize="18sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/font_semibold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_height="wrap_content"
            android:text="@string/onboardingSheetExplanation"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/textDark" />

        <LinearLayout
            android:id="@+id/button.google"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/button_rounded_outline_blue">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:text="@string/signWithGoogle"
                android:textColor="@color/blue"
                android:fontFamily="@font/font_semibold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/margin_medium">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_weight="0.4"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAlignment="center"
                android:layout_weight="0.2"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_weight="0.4"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/label.continue.as.guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:text="@string/continue_as_guest"
            android:textAlignment="center"
            android:fontFamily="@font/font_semibold"
            android:textColor="@color/textSecondary"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>