<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboardingFragment">

    <action
        android:id="@+id/action_global_cartFragment"
        app:destination="@id/cartFragment"
        app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>

    <action
        android:id="@+id/action_global_productListFragment"
        app:destination="@id/productListFragment"
        app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>

    <action
        android:id="@+id/action_global_searchFragment"
        app:destination="@id/searchFragment"
        app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>

    <action
        android:id="@+id/action_global_profileFragment"
        app:destination="@id/profileFragment"
        app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>

    <action
        android:id="@+id/action_global_onboardingFragment"
        app:destination="@id/onboardingFragment"
        app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>

    <fragment
        android:id="@+id/productListFragment"
        android:name="com.example.getirlite.view.fragments.productList.ProductListFragment"
        android:label="@string/productListFragmentLabel" >
        <action
            android:id="@+id/action_productListFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productListFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productListFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productListFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.getirlite.view.fragments.productDetail.ProductDetailFragment"
        android:label="@string/productDetailFragmentLabel" >
        <argument
            android:name="productId"
            app:argType="string" />
        <action
            android:id="@+id/action_productDetailFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productDetailFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productDetailFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_productDetailFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.getirlite.view.fragments.cart.CartFragment"
        android:label="@string/cartFragmentLabel" >
        <argument
            android:name="productId"
            app:argType="string" />
        <action
            android:id="@+id/action_cartFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_cartFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_cartFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_cartFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.getirlite.view.fragments.profile.ProfileFragment"
        android:label="@string/profileFragmentLabel" >
        <action
            android:id="@+id/action_profileFragment_to_searchFragment"
            app:destination="@id/searchFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_profileFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_profileFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_profileFragment_to_favouriteItemsFragment"
            app:destination="@id/favouriteItemsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_profileFragment_to_onboardingFragment"
            app:destination="@id/onboardingFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.getirlite.view.fragments.search.SearchFragment"
        android:label="@string/searchFragmentLabel" >
        <argument
            android:name="productId"
            app:argType="string" />
        <action
            android:id="@+id/action_searchFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_searchFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_searchFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_searchFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.example.getirlite.view.fragments.onboarding.OnboardingFragment"
        android:label="Getir" >
        <action
            android:id="@+id/action_onboardingFragment_to_productListFragment"
            app:destination="@id/productListFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out" />
    </fragment>
    <fragment
        android:id="@+id/favouriteItemsFragment"
        android:name="com.example.getirlite.view.fragments.profile.controllers.FavouriteItemsFragment"
        android:label="@string/favouriteItemsFragmentLabel" >
        <action
            android:id="@+id/action_favouriteItemsFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_favouriteItemsFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
</navigation>